--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -12,8 +12,8 @@
 
     <%= link_to root_path do %>
       <div class="flex">
-        <h2 class="text-gray-600 font-bold text-2xl">Mabcia</h2>
-        <h2 class="text-japonica-500 font-bold text-2xl">Ceramic</h2>
+        <h2 class="text-gray-700 font-black text-xl">Mabcia</h2>
+        <h2 class="text-japonica-500 font-black text-xl">Ceramic</h2>
       </div>
     <% end %>
 
@@ -42,8 +42,8 @@
         <div>
           <%= link_to root_path do %>
             <div class="flex">
-              <h2 class="text-gray-600 font-bold text-2xl xl:text-3xl">Mabcia</h2>
-              <h2 class="text-japonica-500 font-bold text-2xl xl:text-3xl">Ceramic</h2>
+              <h2 class="text-gray-700 font-bold text-2xl">Mabcia</h2>
+              <h2 class="text-japonica-500 font-bold text-2xl">Ceramic</h2>
             </div>
           <% end %>
         </div>
