--- a/app/views/items/index.html.erb
+++ b/app/views/items/index.html.erb
@@ -1,9 +1,9 @@
 
 <div data-controller="item-categories">
 
-  <div class="py-24 lg:py-36 max-w-7xl mx-auto">
+  <div class="py-16 lg:py-36 max-w-7xl mx-auto">
     <div class="px-2 md:px-6">
-      <h2 class="text-3xl font-medium text-left text-gray-700 lg:text-4xl">Mes créations du moment</h2>
+      <h2 class="text-3xl font-medium font-cursive text-left text-gray-700 tracking-tight lg:text-4xl">Mes créations du moment</h2>
       <p class="pt-2 text-sm text-gray-500 max-w-md">Explorez ma séléction personnelle d'objet que j'ai réalisée à la main dans mon ateliers. Des objets du quotidiens, décoratifs, pour votre intérieur ou votre aquarium, il y en a pour tous les goûts.</p>
     </div>
 
@@ -51,9 +51,9 @@
     <div class="pt-4 pb-10  mt-10 ml-2 overflow-x-auto scrollbars-hidden md:ml-6">
       <div class="px-4 inline-flex items-center text-center space-x-2">
 
-        <button data-action="click->item-categories#displayAll" data-item-categories-target="allButton" class="px-4 py-3 text-sm font-medium text-white rounded-full  border border-gray-200 whitespace-nowrap focus:outline-none">Tout voir</button>
+        <button data-action="click->item-categories#displayAll" data-item-categories-target="allButton" class="px-4 py-3 text-sm font-bold text-white rounded-full  border border-gray-200 whitespace-nowrap focus:outline-none">Tout voir</button>
         <% @categories.each do |category| %>
-          <button data-action="click->item-categories#display" data-type="<%= category %>" data-item-categories-target="categoryButton" class="px-4 py-3 text-sm font-medium rounded-full border border-gray-200 whitespace-nowrap focus:outline-none"> <%= category %> </button>
+          <button data-action="click->item-categories#display" data-type="<%= category %>" data-item-categories-target="categoryButton" class="px-4 py-3 text-sm font-bold rounded-full border border-gray-200 whitespace-nowrap focus:outline-none"> <%= category %> </button>
         <% end %>
       </div>
     </div>
@@ -69,19 +69,19 @@
               <div class="relative" style="padding-bottom: 80%">
                 <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
               </div>
-              <div class="px-2 pt-2">
-                <div class=""><%= item.title %></div>
+              <div class="px-2 pt-2 ">
+                <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive" ><%= item.title %></div>
               </div>
               <div class="px-2 pt-1">
-                <span class="font-medium"> <%= item.price %>€ </span>
+                <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
               </div>
               <% if item.sold? %>
                 <div class="px-2 py-1">
-                  <span class="rounded px-2 py-1 bg-gray-800 text-white text-xs font-bold">Vendu</span>
+                  <span class="rounded-full px-2 py-1 bg-gray-700 text-white text-xs font-bold">Vendu</span>
                 </div>
               <% else %>
                 <div class="px-2 py-1">
-                  <span class="rounded-full px-2 py-1 bg-japonica-300 text-white text-xs font-bold">Livraison GRATUITE</span>
+                  <span class="rounded-full px-2 py-1 bg-japonica-400 text-white text-xs font-bold">Livraison GRATUITE</span>
                 </div>
               <% end %>
             </div>
@@ -101,18 +101,18 @@
               <%= cl_image_tag item.photos[0].key, class:'rounded-t absolute h-full w-full inset-0 object-cover shadow'  %>
             </div>
             <div class="px-2 pt-2">
-              <div class=""><%= item.title %></div>
+              <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive"><%= item.title %></div>
             </div>
             <div class="px-2 pt-1">
-              <span class="font-medium"> <%= item.price %>€ </span>
+              <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
             </div>
             <% if item.sold? %>
               <div class="px-2 py-1">
-                <span class="rounded px-2 py-1 bg-gray-800 text-white text-xs font-bold">Vendu</span>
+                <span class="rounded-full px-2 py-1 bg-gray-700 text-white text-xs font-bold">Vendu</span>
               </div>
             <% else %>
               <div class="px-2 py-1">
-                <span class="rounded-full px-2 py-1 bg-japonica-300 text-white text-xs font-bold">Livraison GRATUITE</span>
+                <span class="rounded-full px-2 py-1 bg-japonica-400 text-white text-xs font-bold">Livraison GRATUITE</span>
               </div>
             <% end %>
           </div>
