--- a/app/views/shared/_menu_after_login.html.erb
+++ b/app/views/shared/_menu_after_login.html.erb
@@ -2,46 +2,46 @@
 
   <div class="pb-3 border-b border-gray-200">
     <div>
-      <%= link_to items_path, class:'flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
-        <svg class="w-6 h-6 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"/></svg>
+      <%= link_to items_path, class:'text-lg flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
+        <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M12 8v13m0-13V6a2 2 0 112 2h-2zm0 0V5.5A2.5 2.5 0 109.5 8H12zm-7 4h14M5 12a2 2 0 110-4h14a2 2 0 110 4M5 12v7a2 2 0 002 2h10a2 2 0 002-2v-7"/></svg>
         <span class="font-semibold text-gray-700 ">Magasin</span>
       <% end %>
     </div>
     <div>
-      <%= link_to articles_path, class:'flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
-      <svg class="w-6 h-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      <%= link_to articles_path, class:'text-lg flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
+      <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
       <span class="font-semibold text-gray-700 ">Blog</span>
       <% end %>
     </div>
     <div>
-      <%= link_to about_path, class:'flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
-        <svg class="w-6 h-6 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"/></svg>
+      <%= link_to about_path, class:'text-lg flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
+        <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M7 21a4 4 0 01-4-4V5a2 2 0 012-2h4a2 2 0 012 2v12a4 4 0 01-4 4zm0 0h12a2 2 0 002-2v-4a2 2 0 00-2-2h-2.343M11 7.343l1.657-1.657a2 2 0 012.828 0l2.829 2.829a2 2 0 010 2.828l-8.486 8.485M7 17h.01"/></svg>
         <span class="font-semibold text-gray-700 ">A propos</span>
       <% end %>
     </div>
     <div>
-      <%= link_to new_contact_path, class:'flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
-      <svg class="w-6 h-6 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/></svg>
+      <%= link_to new_contact_path, class:'text-lg flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
+      <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M3 8l7.89 5.26a2 2 0 002.22 0L21 8M5 19h14a2 2 0 002-2V7a2 2 0 00-2-2H5a2 2 0 00-2 2v10a2 2 0 002 2z"/></svg>
       <span class="font-semibold text-gray-700 ">Contactez-moi</span>
       <% end %>
     </div>
   </div>
 
   <div class="pt-3">
-    <div class="px-4 py-3 flex items-center">
+    <div class="px-4 py-3 text-lg flex items-center">
       <%= cl_image_tag current_user.profil_pic, class:'w-12 rounded-full' %>
       <span class="ml-4 font-bold text-gray-700 text-lg"> <%= current_user.name %> </span>
     </div>
     <div>
-      <%= link_to orders_path, class:'flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
-      <svg class="w-6 h-6 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"/></svg>
+      <%= link_to orders_path, class:'text-lg flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
+      <svg class="w-8 h-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 11H5m14 0a2 2 0 012 2v6a2 2 0 01-2 2H5a2 2 0 01-2-2v-6a2 2 0 012-2m14 0V9a2 2 0 00-2-2M5 11V9a2 2 0 012-2m0 0V5a2 2 0 012-2h6a2 2 0 012 2v2M7 7h10"/></svg>
       <span class="font-medium text-gray-700 ">Mes commandes</span>
       <% end %>
     </div>
 
     <div>
-      <%= link_to destroy_user_session_path, class:"flex items-center space-x-4 hover:bg-white rounded px-4 py-3", method: :delete do %>
-        <svg class="w-6 h-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13 16v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1m4 8l4-4-4 4zm4-4l-4-4 4 4zm0 0H7h14z" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
+      <%= link_to destroy_user_session_path, class:"text-lg flex items-center space-x-4 hover:bg-white rounded px-4 py-3", method: :delete do %>
+        <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M13 16v1a3 3 0 01-3 3H6a3 3 0 01-3-3V7a3 3 0 013-3h4a3 3 0 013 3v1m4 8l4-4-4 4zm4-4l-4-4 4 4zm0 0H7h14z" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
         <span class="font-medium text-gray-700 ">Se déconnecter</span>
       <% end %>
     </div>
@@ -49,7 +49,7 @@
 
   <!-- </div> -->
   <!-- <div class="px-6 py-4">
-    <div class="flex items-center  space-x-4">
+    <div class="text-lg flex items-center  space-x-4">
       <%#= cl_image_tag current_user.profil_pic, class:"h-12 rounded-full border-4 border-japonica-500" %>
       <span class="text-lg font-semibold text-gray-700 "> <%#= current_user.name %> </span>
     </div>
