--- a/app/views/pages/home.html.erb
+++ b/app/views/pages/home.html.erb
@@ -88,16 +88,18 @@
                 <div class="px-2 pt-4">
                   <div class="text-gray-700 font-semibold tracking-tight truncate font-cursive"><%= item.title %></div>
                 </div>
-                <div class="px-2 pt-1">
-                  <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
-                </div>
                 <% if item.sold? %>
-                  <div class="px-2 py-2">
-                    <span class="rounded-full px-2 py-1 bg-gray-700 text-white text-xs font-bold">Vendu</span>
+                  <div class='flex justify-between items-center'>
+                    <div class="px-2 pt-2">
+                      <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
+                    </div>
+                    <div class="px-2">
+                      <span class="rounded px-1 py-1 bg-gray-700 text-white text-xs font-bold">Vendu</span>
+                    </div>
                   </div>
                 <% else %>
-                  <div class="px-2 py-2">
-                    <span class="rounded-full px-2 py-1 bg-japonica-400 text-white text-xs font-bold">Livraison GRATUITE</span>
+                  <div class="px-2 pt-2">
+                    <span class="font-medium text-gray-800"> <%= item.price %>€ </span>
                   </div>
                 <% end %>
               </div>
