--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -36,8 +36,8 @@
 <!-- Navbar sur desktop -->
 <nav class="hidden lg:contents">
 
-  <div class="shadow">
-    <div class="flex justify-between items-center py-3 px-4  max-w-7xl mx-auto">
+  <div class="sticky top-0 z-50 bg-white">
+    <div class="px-4 py-3 flex justify-between items-center border-b-2 border-gray-200 border-opacity-20 max-w-7xl mx-auto">
       <div class="flex items-baseline space-x-8 xl:space-x-14">
         <div>
           <%= link_to root_path do %>
