--- a/app/views/shared/_nav_buttons_after_login.html.erb
+++ b/app/views/shared/_nav_buttons_after_login.html.erb
@@ -1,32 +1,22 @@
 <div class="flex space-x-2 xl:space-x-4">
-  <div>
-    <%= link_to items_path, class:"" do %>
-      <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Magasin</button>
-    <% end %>
+  <div class="<%= params[:controller] == "items" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+    <%= link_to "Magasin", items_path %>
   </div>
-  <div>
-    <%= link_to articles_path, class:'' do %>
-    <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Blog</button>
-    <% end %>
+  <div class="<%= params[:controller] == "articles" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+    <%= link_to "Journal", articles_path %>
   </div>
-  <div>
-    <%= link_to about_path, class:'' do %>
-    <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">A propos</button>
-    <% end %>
+  <div class="<%= params[:action] == "about" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+    <%= link_to "A propos", about_path %>
   </div>
-  <div>
-    <%= link_to new_contact_path, class:'' do %>
-    <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Contactez-moi</button>
-    <% end %>
+  <div class="<%= params[:controller] == "contacts" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+    <%= link_to "Contactez-moi", new_contact_path %>
   </div>
-  <div>
-    <%= link_to orders_path, class:"" do %>
-      <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Carnet de commande</button>
-    <% end %>
+  <div class="<%= params[:controller] == "orders" ? 'px-2 py-1 rounded text-sm font-semibold text-gray-600 bg-gray-200 focus:outline-none xl:text-base' : 'px-2 py-1 rounded text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base' %>">
+    <%= link_to "Mes comandes", orders_path %>
   </div>
   <div>
     <%= link_to destroy_user_session_path, method: :delete, class:"" do  %>
-      <button class="w-full rounded px-2 py-1 text-base font-semibold text-gray-700 hover:bg-gray-100 focus:outline-none xl:text-lg">Se déconnecter</button>
+      <button class="px-2 py-1 rounded w-full text-sm font-semibold text-gray-600 hover:bg-gray-100 focus:outline-none xl:text-base">Se déconnecter</button>
     <% end %>
   </div>
 </div>
