--- a/app/views/shared/_navbar.html.erb
+++ b/app/views/shared/_navbar.html.erb
@@ -21,7 +21,7 @@
       <%= link_to cart_path(@cart), class:'flex items-center hover:bg-white rounded py-2' do %>
         <svg class="w-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" /></svg>
         <% if cart_has_items %>
-          <span class="text-lg font-semibold text-gray-700 ">(<%= cart_count_over_one %>)</span>
+          <span class="text-xxs font-black text-white bg-gray-700 px-1.5 py-0.5 rounded-full"><%= cart_count_over_one %></span>
         <% end %>
       <% end %>
     </div>
@@ -53,10 +53,10 @@
       </div>
 
       <div>
-        <%= link_to cart_path(@cart), class:'flex items-center hover:bg-gray-100 rounded py-2 px-2' do %>
+        <%= link_to cart_path(@cart), class:'flex items-start hover:bg-gray-100 rounded py-2 px-2' do %>
           <svg class="w-8 text-japonica-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M3 1a1 1 0 000 2h1.22l.305 1.222a.997.997 0 00.01.042l1.358 5.43-.893.892C3.74 11.846 4.632 14 6.414 14H15a1 1 0 000-2H6.414l1-1H14a1 1 0 00.894-.553l3-6A1 1 0 0017 3H6.28l-.31-1.243A1 1 0 005 1H3zM16 16.5a1.5 1.5 0 11-3 0 1.5 1.5 0 013 0zM6.5 18a1.5 1.5 0 100-3 1.5 1.5 0 000 3z" /></svg>
           <% if cart_has_items %>
-            <span class="text-lg font-semibold text-gray-700 ">(<%= cart_count_over_one %>)</span>
+            <span class="text-xxs font-black text-white bg-gray-700 px-1.5 py-0.5 rounded-full"><%= cart_count_over_one %></span>
           <% end %>
         <% end %>
       </div>
