--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,35 +1,85 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<div class="px-4 pb-8">
 
-<%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
-  <%= f.error_notification %>
+  <div class="px-6 pt-8 flex items-center justify-between">
+      <div>
+        <%= link_to root_path do %>
+        <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+        <% end %>
+      </div>
 
-  <div class="form-inputs">
-    <%= f.input :email, required: true, autofocus: true %>
+      <div>
+        <%= image_tag 'Logo.png', alt:'logo', class:'w-14 h-14 rounded-full' %>
+      </div>
 
-    <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
-      <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+  <!--    bricolage pour avoir le logo parfaitement centré -->
+      <div class="invisible">
+        <%= link_to root_path do %>
+        <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+        <% end %>
+      </div>
+    </div>
+
+  <h1 class="px-8 pt-4 text-center text-2xl font-medium">Paramètres</h1>
+
+  <div class="py-6 text-center max-w-xs mx-auto">
+    <%= simple_form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
+      <%= f.error_notification %>
+
+      <div class="space-y-4 text-left">
+        <%= f.input :email,
+                    label: "Email",
+                    label_html: { class:"text-sm text-gray-600 tracking-tight"},
+                    required: true,
+                    autofocus: true,
+                    input_html: { class: "px-2 py-3 border-2  border-gray-200 w-full rounded-lg" } %>
+
+        <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
+          <p>Currently waiting confirmation for: <%= resource.unconfirmed_email %></p>
+        <% end %>
+
+        <%= f.input :first_name,
+                      required: false,
+                      label: "Prénom",
+                      placeholder: 'Prénom*',
+                      label_html: { class:"text-sm text-gray-600 tracking-tight"},
+                      input_html: { class: " text-sm text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :last_name,
+                      required: false,
+                      label: "Nom",
+                      label_html: { class:"text-sm text-gray-600 tracking-tight"},
+                      placeholder: 'Nom*',
+                      input_html: { class: "text-sm px-2 py-3 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :password,
+                    hint: "laisser vide si vous ne voulez pas le changer",
+                    hint_html: { class:"text-xs italic text-gray-600"},
+                    label: "Mot de passe",
+                    label_html: { class:"text-sm text-gray-600 tracking-tight"},
+                    required: false,
+                    input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg" } %>
+
+        <%= f.input :password_confirmation,
+                    required: false,
+                    label: "Mot de passe confirmation",
+                    label_html: { class:"text-sm text-gray-600 tracking-tight"},
+                    input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg" } %>
+
+        <%= f.input :current_password,
+                    hint: "Nous avons besoin de votre mot de passe actuel pour confirmer le changement",
+                    hint_html: { class:"text-xs italic text-gray-600"},
+                    label: "Mot de passe actuel",
+                    label_html: { class:"text-sm text-gray-600 tracking-tight"},
+                    required: true,
+                    input_html: { class: "px-2 py-3 border-2 border-gray-200 w-full rounded-lg" } %>
+      </div>
+
+      <div class="pt-4">
+        <%= f.button :submit, "Mettre à jour", class:"w-full py-4 rounded-xl bg-black text-white font-medium text-lg" %>
+      </div>
     <% end %>
 
-    <%= f.input :password,
-                hint: "leave it blank if you don't want to change it",
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :password_confirmation,
-                required: false,
-                input_html: { autocomplete: "new-password" } %>
-    <%= f.input :current_password,
-                hint: "we need your current password to confirm your changes",
-                required: true,
-                input_html: { autocomplete: "current-password" } %>
+
+    <p class="pt-2">Vous souhaitez supprimer votre compte ? <%= link_to "Supprimer mon compte", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete, class:"underline" %></p>
   </div>
-
-  <div class="form-actions">
-    <%= f.button :submit, "Update" %>
-  </div>
-<% end %>
-
-<h3>Cancel my account</h3>
-
-<p>Unhappy? <%= link_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
-
-<%= link_to "Back", :back %>
+</div>
