item show front on mobile ok

--- a/app/views/shared/_navbar_light.html.erb
+++ b/app/views/shared/_navbar_light.html.erb
@@ -2,9 +2,9 @@
   <div class="flex items-center justify-between pt-4 px-2">
 
 
-    <div class="px-2">
+    <div>
       <%= link_to items_path do %>
-      <button class="outline-none"><svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
+      <button class="focus:outline-none"><svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
       <% end %>
     </div>
 
