--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -8,10 +8,10 @@
 </div>
 
 
-<div class="px-2 pb-8 lg:py-8 max-w-7xl mx-auto">
-  <div class="flex justify-between lg:flex-col-reverse">
-    <span class="font-bold text-gray-700 text-lg md:text-xl lg:text-2xl 2xl:text-3xl"><%= @item.title %></span>
-    <span class="text-japonica-500 font-medium lg:text-lg"><%= @item.category %></span>
+<div class="px-2 pb-24 lg:py-8 max-w-7xl mx-auto">
+  <div class="flex flex-col-reverse">
+    <span class="font-bold text-gray-700 text-lg font-cursive md:text-xl lg:text-2xl 2xl:text-3xl"><%= @item.title %></span>
+    <span class="text-japonica-500 text-sm font-bold lg:text-lg"><%= @item.category %></span>
   </div>
 
 
@@ -28,11 +28,11 @@
     </div>
   </div>
   <div class="flex justify-end pt-1 lg:hidden">
-    <svg class="w-8 text-gray-400" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"/></svg>
+    <svg class="w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M8 7h12m0 0l-4-4m4 4l-4 4m0 6H4m0 0l4 4m-4-4l4-4"/></svg>
   </div>
 
 <!-- grid de photos sur desktop -->
-  <div data-controller="slideshow" class="hidden lg:pt-2 lg:grid lg:grid-rows-2 lg:grid-cols-5  lg:gap-2">
+  <div data-controller="slideshow" class="hidden max-h-screen lg:pt-2 lg:grid lg:grid-rows-2 lg:grid-cols-5 lg:gap-2">
     <div class="relative h-full row-span-2 col-span-3" style="padding-bottom: 80%">
       <%= cl_image_tag @item.photos[0].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
     </div>
@@ -42,9 +42,8 @@
       </div>
     <% end %>
 
-    <div class="relative h-full col-span-2" style="padding-bottom: 80%">
+    <div class="relative h-full col-span-2">
       <%= cl_image_tag @item.photos[1].key, class:'absolute h-full w-full inset-0 object-cover object-center shadow rounded-xl'  %>
-
       <button data-action="slideshow#show" class="absolute right-2 bottom-2 px-2 py-2 bg-white text-black rounded-xl"> Voir toutes les photos</button>
       <div data-slideshow-target="allSlides" class="hidden fixed z-20 inset-0 w-full h-full bg-white">
         <button data-action="slideshow#show" class="mx-4 mt-4 px-2 py-2">
@@ -73,69 +72,82 @@
   <div class="md:flex md:flex-row-reverse md:justify-between">
     <div class="md:flex md:flex-col max-w-lg md:ml-2 md:w-2/5">
       <div class="-mt-4 lg:pt-4 lg:mt-0">
-        <span class="font-bold text-2xl"><%= @item.price %>€</span>
+        <span class="font-medium text-gray-800 font-cursive text-2xl"><%= @item.price %>€</span>
       </div>
-      <div class="pt-2">
-        <span class="px-2 py-1 bg-japonica-500 rounded-full text-white">Pièce unique</span>
-      </div>
-      <div class="pt-4">
+      <div class="pt-2 text-gray-600">
         <%= @item.description[0...197] %>
       </div>
       <% if @item.sold? %>
         <div class="pt-4">
-          <button class="w-full py-3 bg-black text-white rounded focus:outline-none font-medium cursor-default"> Vendu </button>
+          <button class="w-full py-3 bg-black text-white rounded-3xl focus:outline-none font-medium cursor-default"> Vendu </button>
         </div>
       <% else %>
         <div class="pt-4">
-          <%= button_to 'Ajouter au panier', cart_items_path(item_id: @item), class:'w-full py-3 bg-black text-white rounded-3xl focus:outline-none' %>
+          <%= button_to 'Ajouter au panier', cart_items_path(item_id: @item), class:'w-full py-3 bg-gray-900 font-bold text-lg tracking-tight text-white rounded-3xl focus:outline-none' %>
         </div>
       <% end %>
     </div>
 
+
     <div class="md:flex md:flex-col max-w-3xl md:mr-2 md:w-3/5">
       <div data-controller="item-descriptions">
-        <div class="mt-4 md:-mt-4 py-2 px-2 flex justify-between items-center bg-gray-100 lg:mt-4">
-          <button data-action="click->item-descriptions#descriptionToggle" class="flex justify-between w-full focus:outline-none">
-            <span>Détail de l'article</span>
+        <div class="mt-4 md:-mt-4 flex justify-between items-center lg:mt-4">
+          <button data-action="click->item-descriptions#descriptionToggle" class="py-3 px-4 focus:bg-gray-200 rounded-3xl flex justify-between w-full focus:outline-none">
+            <span class="text-gray-900 text-lg font-bold">Détails de l'article</span>
             <svg data-item-descriptions-target="descriptionClose" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
             <svg data-item-descriptions-target="descriptionOpen" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
           </button>
         </div>
         <div data-item-descriptions-target="descriptionToggleable">
-          <div class='px-4'>
-            <div class="pt-4 flex items-center space-x-2">
-              <svg class="w-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 23"><path d="M12.605 13.1l2.273-4.409-1.623-1.686-4.042-4.226a.68.68 0 00-.481-.202.68.68 0 00-.482.202.748.748 0 00-.172.48c0 .176.061.346.172.478L12.037 8.3l-.652.68-5.408-5.52a.704.704 0 00-.5-.217.679.679 0 00-.499.217.756.756 0 00-.194.508c0 .189.07.37.194.508l5.06 5.913-.641.68-4.722-4.896a.653.653 0 00-1.008 0 .748.748 0 00-.172.479c0 .176.06.346.172.479l4.4 5.328-.642.68-3.758-3.325a.688.688 0 00-.459-.176.688.688 0 00-.458.176.756.756 0 00-.207.522c0 .196.075.384.207.522l3.392 3.537 5.188 5.424c.17.179.372.32.595.417a1.762 1.762 0 001.405 0c.223-.096.425-.238.595-.417l4.583-4.744.495-.518c.24-.252.41-.57.487-.916a2 2 0 00-.047-1.048L16.5 4.964l-.55.192a.708.708 0 00-.32.24.757.757 0 00-.147.382l.367 3.93-2.595 4.073-.65-.681z" fill="#222"/></svg>
-              <span>Fait main</span>
-            </div>
-            <div class="pt-2 flex items-center space-x-2">
-              <svg class="w-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.1 5.76c.7 1.632.9 3.456.4 5.376-.8 3.264-3.5 5.856-6.9 6.624-2 .48-3.9.192-5.6-.384v1.344l1.5 1.44h12l1.5-1.44V7.2l-1.5-1.44h-1.4z" fill="#000"/><path d="M9.5 1.92C5.4 1.92 2 5.184 2 9.12c0 3.936 3.4 7.2 7.5 7.2s7.5-3.264 7.5-7.2c0-3.936-3.4-7.2-7.5-7.2zM7.8 14.4a5.64 5.64 0 01-1.7-.864l8-7.68c.4.48.7 1.056.9 1.632L7.8 14.4zm3.4-10.56c.6.192 1.2.48 1.7.864l-8 7.68c-.4-.48-.7-1.056-.9-1.632l7.2-6.912zM9 3.648L3.8 8.64C4 5.952 6.2 3.84 9 3.648zm1 10.944L15.2 9.6c-.2 2.688-2.4 4.8-5.2 4.992z" fill="#000"/>
-              <span>Matériaux</span>
-            </div>
-            <div class="pt-1">
-              <span class="text-xl font-medium">  <%= @item.materials.join(', ') %> </span>
+          <div class='px-4 pt-4 space-y-2'>
+            <div class="relative flex items-center justify-between space-x-4">
+              <div>
+                <div class="flex items-center space-x-2">
+                  <svg class="w-6 h-6" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor"><path d="M10 3.5a1.5 1.5 0 013 0V4a1 1 0 001 1h3a1 1 0 011 1v3a1 1 0 01-1 1h-.5a1.5 1.5 0 000 3h.5a1 1 0 011 1v3a1 1 0 01-1 1h-3a1 1 0 01-1-1v-.5a1.5 1.5 0 00-3 0v.5a1 1 0 01-1 1H6a1 1 0 01-1-1v-3a1 1 0 00-1-1h-.5a1.5 1.5 0 010-3H4a1 1 0 001-1V6a1 1 0 011-1h3a1 1 0 001-1v-.5z"/></svg>
+                  <span class="text-gray-900 font-medium">Pièce unique</span>
+                </div>
+                <div class="flex items-center space-x-2">
+                  <svg class="w-6 h-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 22 23"><path d="M12.605 13.1l2.273-4.409-1.623-1.686-4.042-4.226a.68.68 0 00-.481-.202.68.68 0 00-.482.202.748.748 0 00-.172.48c0 .176.061.346.172.478L12.037 8.3l-.652.68-5.408-5.52a.704.704 0 00-.5-.217.679.679 0 00-.499.217.756.756 0 00-.194.508c0 .189.07.37.194.508l5.06 5.913-.641.68-4.722-4.896a.653.653 0 00-1.008 0 .748.748 0 00-.172.479c0 .176.06.346.172.479l4.4 5.328-.642.68-3.758-3.325a.688.688 0 00-.459-.176.688.688 0 00-.458.176.756.756 0 00-.207.522c0 .196.075.384.207.522l3.392 3.537 5.188 5.424c.17.179.372.32.595.417a1.762 1.762 0 001.405 0c.223-.096.425-.238.595-.417l4.583-4.744.495-.518c.24-.252.41-.57.487-.916a2 2 0 00-.047-1.048L16.5 4.964l-.55.192a.708.708 0 00-.32.24.757.757 0 00-.147.382l.367 3.93-2.595 4.073-.65-.681z" fill="#222"/></svg>
+                  <span class="text-gray-900 font-medium">Fait main</span>
+                </div>
+                <div class="flex items-center space-x-2">
+                  <svg class="w-6 h-6" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M18.1 5.76c.7 1.632.9 3.456.4 5.376-.8 3.264-3.5 5.856-6.9 6.624-2 .48-3.9.192-5.6-.384v1.344l1.5 1.44h12l1.5-1.44V7.2l-1.5-1.44h-1.4z" fill="#000"/><path d="M9.5 1.92C5.4 1.92 2 5.184 2 9.12c0 3.936 3.4 7.2 7.5 7.2s7.5-3.264 7.5-7.2c0-3.936-3.4-7.2-7.5-7.2zM7.8 14.4a5.64 5.64 0 01-1.7-.864l8-7.68c.4.48.7 1.056.9 1.632L7.8 14.4zm3.4-10.56c.6.192 1.2.48 1.7.864l-8 7.68c-.4-.48-.7-1.056-.9-1.632l7.2-6.912zM9 3.648L3.8 8.64C4 5.952 6.2 3.84 9 3.648zm1 10.944L15.2 9.6c-.2 2.688-2.4 4.8-5.2 4.992z" fill="#000"/>
+                  <span class="text-gray-900 font-medium">Matériaux</span>
+                </div>
+                <div class="pt-1">
+                  <span class="text-xl font-medium">  <%= @item.materials.join(', ') %> </span>
+                </div>
+              </div>
+              <div class="absolute right-20 top-14">
+                <svg class="w-28 h-28 text-japonica-500" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 20 20" fill="currentColor">
+                  <path fill-rule="evenodd" d="M10 2a1 1 0 011 1v1a1 1 0 11-2 0V3a1 1 0 011-1zm4 8a4 4 0 11-8 0 4 4 0 018 0zm-.464 4.95l.707.707a1 1 0 001.414-1.414l-.707-.707a1 1 0 00-1.414 1.414zm2.12-10.607a1 1 0 010 1.414l-.706.707a1 1 0 11-1.414-1.414l.707-.707a1 1 0 011.414 0zM17 11a1 1 0 100-2h-1a1 1 0 100 2h1zm-7 4a1 1 0 011 1v1a1 1 0 11-2 0v-1a1 1 0 011-1zM5.05 6.464A1 1 0 106.465 5.05l-.708-.707a1 1 0 00-1.414 1.414l.707.707zm1.414 8.486l-.707.707a1 1 0 01-1.414-1.414l.707-.707a1 1 0 011.414 1.414zM4 11a1 1 0 100-2H3a1 1 0 000 2h1z" clip-rule="evenodd" />
+                </svg>
+              </div>
             </div>
 
-            <div class="pt-6 flex flex-col">
+            <div class="flex flex-col">
+              <span class="py-4 text-gray-900 font-semibold">Dimension</span>
+
               <% if @item.width %>
-                <span>Largeur: <%= @item.width / 10 %> cm</span>
+                <span class="text-gray-700">Largeur: <%= @item.width / 10 %> cm</span>
               <% end %>
               <% if @item.length %>
-                <span>Longueur: <%= @item.length / 10 %> cm</span>
+                <span class="text-gray-700">Longueur: <%= @item.length / 10 %> cm</span>
               <% end %>
               <% if @item.height %>
-                <span>Hauteur: <%= @item.height / 10 %> cm</span>
+                <span class="text-gray-700">Hauteur: <%= @item.height / 10 %> cm</span>
               <% end %>
               <% if @item.diameter %>
-                <span>Diamètre: <%= @item.diameter / 10 %> cm</span>
+                <span class="text-gray-700">Diamètre: <%= @item.diameter / 10 %> cm</span>
               <% end %>
 
 
             </div>
 
             <div class="pt-6">
-              <span class="font-semibold">Description</span>
-              <div class="pt-2">
-                <span><%= @item.description %></span>
+              <span class="font-semibold text-gray-900">Description</span>
+              <div class="pt-4">
+                <span class="text-gray-600"><%= @item.description %></span>
               </div>
             </div>
 
@@ -144,21 +156,23 @@
 
 
 
-        <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100">
-          <button data-action="click->item-descriptions#deliveryToggle" class="flex justify-between w-full focus:outline-none">
-            <span>Conditions de ventes et de livraison</span>
-            <svg data-item-descriptions-target="deliveryClose" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
-            <svg data-item-descriptions-target="deliveryOpen" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>        </button>
+        <div class="mt-6 flex justify-between items-center">
+          <button data-action="click->item-descriptions#deliveryToggle" class="py-3 px-4 focus:bg-gray-200 rounded-3xl flex justify-between w-full focus:outline-none">
+            <span class="text-gray-900 text-lg font-bold">Conditions de ventes et de livraison</span>
+            <svg data-item-descriptions-target="deliveryClose" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
+            <svg data-item-descriptions-target="deliveryOpen" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
+          </button>
         </div>
-        <div data-item-descriptions-target="deliveryToggleable" class="px-4 pt-4">
+        <div data-item-descriptions-target="deliveryToggleable" class="hidden px-4 pt-4">
+          <span>Livraison gratuite</span>
           <span>Date d'arrivée estimée : <%= Date.today.next_day(7).strftime("%a, %d, %B") %>  </span>
         </div>
 
-        <div class="mt-6 py-2 px-2 flex justify-between items-center bg-gray-100">
-          <button data-action="click->item-descriptions#contactToggle" class="flex justify-between w-full focus:outline-none">
-            <span>Contactez-moi</span>
-            <svg data-item-descriptions-target="contactClose" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
-            <svg data-item-descriptions-target="contactOpen" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
+        <div class="mt-6 flex justify-between items-center">
+          <button data-action="click->item-descriptions#contactToggle" class="py-3 px-4 focus:bg-gray-200 rounded-3xl flex justify-between w-full focus:outline-none">
+            <span class="text-gray-900 text-lg font-bold">Contactez-moi</span>
+            <svg data-item-descriptions-target="contactClose" class=" w-6 hidden text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M5 15l7-7 7 7"/></svg>
+            <svg data-item-descriptions-target="contactOpen" class=" w-6 text-gray-600" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M19 9l-7 7-7-7"/></svg>
           </button>
         </div>
         <div data-item-descriptions-target="contactToggleable" class="hidden">
