--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -2,7 +2,7 @@
 <% if @order.status.nil? %>
 
   <div class="h-screen w-full max-w-5xl mx-auto flex flex-col items-center">
-    <p class="pt-12 text-3xl">Oops ! Vous n'êtes pas aller jusqu'au bout du paiement ! Vous pouvez recommencer en visualisant votre panier en haut de votre écran si vous le souhaitez ! Si vous avez des questions, n'hésitez pas à me contacter</p>
+    <p class="pt-12 text-3xl px-4">Oops ! Vous n'êtes pas aller jusqu'au bout du paiement ! Vous pouvez recommencer en visualisant votre panier en haut de votre écran si vous le souhaitez ! Si vous avez des questions, n'hésitez pas à me contacter</p>
     <div class="pt-12">
       <svg class="w-60 text-japonica-500 opacity-75" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M9.172 16.172a4 4 0 015.656 0M9 10h.01M15 10h.01M21 12a9 9 0 11-18 0 9 9 0 0118 0z" />
