contact page fix

--- a/app/views/contacts/new.html.erb
+++ b/app/views/contacts/new.html.erb
@@ -1,8 +1,8 @@
 
 
-<div class="px-2 py-16 lg:flex lg:justify-center lg:space-x-12 lg:px-12">
-  <div class="max-w-md pr-12 lg:w-2/5">
-    <h1 class="text-3xl font-medium text-left text-gray-700 lg:text-4xl">Contactez-moi</h1>
+<div class="px-2 py-16 max-w-7xl mx-auto lg:flex lg:justify-center lg:space-x-6 lg:px-12">
+  <div class="max-w-xl mx-auto pr-12 lg:w-2/5">
+    <h1 class="text-3xl font-cursive font-medium text-left text-gray-700 lg:text-4xl">Contactez-moi</h1>
     <p class="pt-4 text-sm text-gray-500">Nullam risus blandit ac aliquam justo ipsum. Quam mauris volutpat massa dictumst amet. Sapien tortor lacus arcu.</p>
 
     <div class="pt-4 flex items-center space-x-2">
