--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -81,7 +81,7 @@
         </div>
 
         <div class="form-actions pt-6">
-          <%= f.button :submit, "Valider", class:"w-full py-4 rounded-xl bg-gray-900 text-white font-bold text-lg" %>
+          <%= f.button :submit, "Valider", class:"w-full py-4 rounded-xl bg-gray-900 text-white font-bold text-lg focus:outline-none" %>
         </div>
 
       <% end %>
