--- a/app/views/adresses/edit.html.erb
+++ b/app/views/adresses/edit.html.erb
@@ -1,63 +1,66 @@
-<div class="px-6 py-2">
-  <%= link_to root_path do %>
-  <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
-  <% end %>
-</div>
+<div class="px-4">
 
-<div class="flex justify-center">
-  <%= image_tag 'Logo.png', alt:'logo', class:'w-16 rounded-full' %>
-</div>
-
-
-<div class="pt-6 px-4">
-  <h1 class="px-6 text-center text-3xl font-medium">Adresse de livraison</h1>
-  <div class="py-8 text-center max-w-xs mx-auto">
-    <%= simple_form_for [current_user, @adress] do |f| %>
-      <div class="space-y-3">
-
-      <%= f.input :name,
-                  required: false,
-                  label: false,
-                  placeholder: "Toto L'Asticot",
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
-
-
-      <%= f.input :street,
-                  required: false,
-                  autofocus: true,
-                  label: false,
-                  placeholder: '18 rue saint marcelin',
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
-
-      <%= f.input :street_detail,
-                  required: false,
-                  label: false,
-                  placeholder: "Complément d'adresse",
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
-
-      <%= f.input :zipcode,
-                  required: false,
-                  label: false,
-                  placeholder: "75000",
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
-
-      <%= f.input :city,
-                  required: false,
-                  label: false,
-                  placeholder: "Paris",
-                  input_html: { class: "px-2 py-4 border-2 border-gray-200 w-full rounded-lg"} %>
-
-      <%#= f.input :country,
-                  collection: ['France(métropolitaine)'],
-                  required: false,
-                  label: false,
-                  input_html: { class: "px-2 py-4 border-2 w-full rounded-lg"} %>
-
-
-      <div class="pt-2">
-        <%= f.button :submit, "Valider", class:'w-full font-medium bg-black text-white py-3 rounded-3xl' %>
-      </div>
-
+  <div class="px-6 pt-8 ">
+    <%= link_to root_path do %>
+    <button class="outline-none"><svg class="w-8" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke="currentColor"><path stroke-linecap="round" stroke-linejoin="round" stroke-width="2" d="M10 19l-7-7m0 0l7-7m-7 7h18"/></svg></button>
     <% end %>
+  </div>
 
+  <div class="flex justify-center">
+    <%= image_tag 'Logo.png', alt:'logo', class:'w-16 rounded-full' %>
+  </div>
+
+
+  <div class="pt-5 px-4">
+    <h1 class="px-6 text-center text-2xl text-gray-800 font-bold ">Adresse de livraison</h1>
+    <div class="py-8 text-center max-w-xs mx-auto">
+      <%= simple_form_for [current_user, @adress] do |f| %>
+        <div class="space-y-3">
+
+        <%= f.input :name,
+                    required: false,
+                    label: false,
+                    placeholder: "Toto L'Asticot",
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+
+
+        <%= f.input :street,
+                    required: false,
+                    autofocus: true,
+                    label: false,
+                    placeholder: '18 rue saint marcelin',
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :street_detail,
+                    required: false,
+                    label: false,
+                    placeholder: "Complément d'adresse",
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :zipcode,
+                    required: false,
+                    label: false,
+                    placeholder: "75000",
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%= f.input :city,
+                    required: false,
+                    label: false,
+                    placeholder: "Paris",
+                    input_html: { class: "px-2 py-2 text-gray-700 border-2 border-gray-200 w-full rounded-lg"} %>
+
+        <%#= f.input :country,
+                    collection: ['France(métropolitaine)'],
+                    required: false,
+                    label: false,
+                    input_html: { class: "px-2 py-4 border-2 w-full rounded-lg"} %>
+
+        <p class="text-gray-500 italic text-sm text-left">Livraison exclusivement en France métropolitaine pour le moment</p>
+        <div class="pt-2">
+          <%= f.button :submit, "Valider", class:'w-full py-4 rounded-xl bg-gray-900 text-white font-bold text-lg focus:outline-none' %>
+        </div>
+
+      <% end %>
+
+  </div>
 </div>
