some changes to home articles and blog become journal

--- a/app/views/articles/index.html.erb
+++ b/app/views/articles/index.html.erb
@@ -1,5 +1,5 @@
 <div class="px-4 pt-8 max-w-7xl mx-auto lg:py-16">
-  <h2 class="font-bold text-gray-700 text-2xl text-center">Blog</h2>
+  <h2 class="font-bold text-gray-700 text-2xl text-center">Journal</h2>
   <p class="pt-2 text-gray-500 text-center">Lorem ipsum dolor sit amet consectetur, adipisicing elit. Ipsa libero labore natus atque, ducimus sed.</p>
 
   <div class="pt-6 space-y-6 lg:grid lg:grid-cols-3 lg:gap-4 lg:space-y-0">
