--- a/app/views/items/show.html.erb
+++ b/app/views/items/show.html.erb
@@ -83,7 +83,7 @@
       </div>
       <% if @item.sold? %>
         <div class="pt-4">
-          <button class="w-full py-3 bg-black text-white rounded-3xl focus:outline-none font-medium cursor-default"> Vendu </button>
+          <button class="w-full py-3 bg-gray-900 font-bold text-white rounded-3xl focus:outline-none font-medium cursor-default"> Vendu </button>
         </div>
       <% else %>
         <div class="pt-4">
