--- a/app/views/shared/_menu_after_login.html.erb
+++ b/app/views/shared/_menu_after_login.html.erb
@@ -10,7 +10,7 @@
     <div>
       <%= link_to articles_path, class:'text-lg flex items-center space-x-4 hover:bg-white rounded px-4 py-3' do %>
       <svg class="w-8 h-8" fill="none" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 24 24"><path d="M12 6.253v13m0-13C10.832 5.477 9.246 5 7.5 5S4.168 5.477 3 6.253v13C4.168 18.477 5.754 18 7.5 18s3.332.477 4.5 1.253m0-13C13.168 5.477 14.754 5 16.5 5c1.747 0 3.332.477 4.5 1.253v13C19.832 18.477 18.247 18 16.5 18c-1.746 0-3.332.477-4.5 1.253" stroke="#D97862" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/></svg>
-      <span class="font-semibold text-gray-600 ">Blog</span>
+      <span class="font-semibold text-gray-600 ">Journal</span>
       <% end %>
     </div>
     <div>
