--- a/app/views/shared/_footer.html.erb
+++ b/app/views/shared/_footer.html.erb
@@ -66,7 +66,7 @@
 
             <li>
               <a href="#" class="text-base text-gray-500 hover:text-gray-900">
-                Blog
+                Journal
               </a>
             </li>
           </ul>
