--- a/app/views/orders/show.html.erb
+++ b/app/views/orders/show.html.erb
@@ -1,5 +1,5 @@
 
-<% if @order.status.nil? %>
+<% if @order.status.new? %>
 
   <div class="h-screen w-full max-w-5xl mx-auto flex flex-col items-center">
     <p class="pt-12 text-3xl px-4">Oops ! Vous n'êtes pas aller jusqu'au bout du paiement ! Vous pouvez recommencer en visualisant votre panier en haut de votre écran si vous le souhaitez ! Si vous avez des questions, n'hésitez pas à me contacter</p>
